--- a/oscar/templates/catalogue/partials/gallery.html
+++ b/oscar/templates/catalogue/partials/gallery.html
@@ -1,51 +1,54 @@
-{% if product.images.all.count > 1 %}
-<script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">	    
-	<div class="rg-image-wrapper">
+{% with product.images.all as all_images %}
+    {# use length rather then count as the images get queried anyways #}
+    {% if all_images|length > 1 %}
+    <script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">	    
+            <div class="rg-image-wrapper">
 
-			<div class="rg-image-nav">
-				<a href="#" class="rg-image-nav-prev">Previous Image</a>
-				<a href="#" class="rg-image-nav-next">Next Image</a>
-			</div>
-		<div class="rg-image"></div>
-		<div class="rg-loading"></div>
-		<div class="rg-caption-wrapper">
-			<div class="rg-caption" style="display:none;">
-				<p></p>
-			</div>
-		</div>
-	</div>
-</script>
-<div id="rg-gallery" class="rg-gallery">
-	<div class="rg-thumbs">
-		<!-- Elastislide Carousel Thumbnail Viewer -->
-		<div class="es-carousel-wrapper">
-			<div class="es-nav">
-				<span class="es-nav-prev">Previous</span>
-				<span class="es-nav-next">Next</span>
-			</div>
-			<div class="es-carousel">
-				<ul>
-				    {% for image in product.images.all %}
-					<li>
-					    <a href="{{ image.original.url }}" rel="lightbox">
-					        <img src="{{ image.original.url }}" data-large="{{ image.original.url }}" alt="image02" data-description="{% if image.caption %}{{ image.caption }}{% endif %}" />
-					    </a>
-					</li>
-					{% endfor %}
-				</ul>
-			</div>
-		</div>
-		<!-- End Elastislide Carousel Thumbnail Viewer -->
-	</div><!-- rg-thumbs -->
-</div><!-- rg-gallery -->
-{% else %}
-    {% if product.images.all.count > 0 %}
-        {% for image in product.images.all %}
-        <a href="{{ image.original.url }}" rel="lightbox">
-            <img src="{{ image.original.url }}" data-large="{{ image.original.url }}" alt="image02" data-description="{% if image.caption %}{{ image.caption }}{% endif %}" />
-        </a>
-        {% endfor %}
+                            <div class="rg-image-nav">
+                                    <a href="#" class="rg-image-nav-prev">Previous Image</a>
+                                    <a href="#" class="rg-image-nav-next">Next Image</a>
+                            </div>
+                    <div class="rg-image"></div>
+                    <div class="rg-loading"></div>
+                    <div class="rg-caption-wrapper">
+                            <div class="rg-caption" style="display:none;">
+                                    <p></p>
+                            </div>
+                    </div>
+            </div>
+    </script>
+    <div id="rg-gallery" class="rg-gallery">
+            <div class="rg-thumbs">
+                    <!-- Elastislide Carousel Thumbnail Viewer -->
+                    <div class="es-carousel-wrapper">
+                            <div class="es-nav">
+                                    <span class="es-nav-prev">Previous</span>
+                                    <span class="es-nav-next">Next</span>
+                            </div>
+                            <div class="es-carousel">
+                                    <ul>
+                                        {% for image in all_images %}
+                                            <li>
+                                                <a href="{{ image.original.url }}" rel="lightbox">
+                                                    <img src="{{ image.original.url }}" data-large="{{ image.original.url }}" alt="image02" data-description="{% if image.caption %}{{ image.caption }}{% endif %}" />
+                                                </a>
+                                            </li>
+                                            {% endfor %}
+                                    </ul>
+                            </div>
+                    </div>
+                    <!-- End Elastislide Carousel Thumbnail Viewer -->
+            </div><!-- rg-thumbs -->
+    </div><!-- rg-gallery -->
     {% else %}
-        <img src="/static/oscar/img/image_not_found.jpg" alt="No image found"/>
-    {% endif %}    
-{% endif %}
+        {% with all_images.0 as image %}
+            {% if image %}
+            <a href="{{ image.original.url }}" rel="lightbox">
+                <img src="{{ image.original.url }}" data-large="{{ image.original.url }}" alt="image02" data-description="{% if image.caption %}{{ image.caption }}{% endif %}" />
+            </a>
+            {% else %}
+                <img src="/static/oscar/img/image_not_found.jpg" alt="No image found"/>
+            {% endif %}    
+        {% endwith %}
+    {% endif %}
+{% endwith %}
