--- a/oscar/templates/layout_2_col.html
+++ b/oscar/templates/layout_2_col.html
@@ -19,11 +19,10 @@
             {% include "partials/nav_primary.html" %}
         {% endblock %}
     </header><!-- /header -->
-    {% include "partials/alert_messages.html" %}
     <div class="container-fluid page">
         <div class="page_inner">	
-        	{% block breadcrumbs %}
-            {% endblock %}
+		{% block breadcrumbs %}{% endblock %}
+			{% include "partials/alert_messages.html" %}
             
             <div class="row-fluid">
                 <aside class="sidebar span3">
