--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -18,14 +18,8 @@
         {% include "partials/nav_checkout.html" %}
     </header><!-- /header -->
     <div class="container-fluid page">
-        {% for message in messages %}
-        <div class="alert fade in alert-{{ message.tags }}">
-            <a class="close" data-dismiss="alert">x</a>
-            {{ message }}
-        </div>
-        {% endfor %}
-       {% block header %}
-       {% endblock %}
+		{% include 'partials/alert_messages.html' %}
+        {% block header %}{% endblock %}
 
        <div class="page_inner">
 			{% block checkout-nav %}
