--- a/oscar/templates/dashboard/ranges/range_product_list.html
+++ b/oscar/templates/dashboard/ranges/range_product_list.html
@@ -26,28 +26,35 @@ Products in range {{ range.name }} | {{ block.super }}
 {% endblock header %}
 
 {% block dashboard_content %}
-	<div class="sub-header">
-		<h2>Products</h2>
-	</div>
 	{% if products.count %}
-		<form action="." method="post" class="order_table">
+		<form action="." method="post">
 			{% csrf_token %}
 			<table class="table table-striped table-bordered">
 				<tr>
+					<th></th>
 					<th>Title</th>
 					<th>Price</th>
 					<th></th>
 				</tr>
 				{% for product in products %}
 				<tr>
+					<td>
+						<input type="checkbox" name="selected_product" value="{{ product.id }}" />
+					</td>
 					<td>{{ product.get_title }}</td>
 					<td>{{ product.stockrecord.price_incl_tax|currency }}</td>
 					<td>
-						<a class="btn btn-danger" href="">Remove</a>
+						<a class="btn btn-danger" href="#" data-behaviours="remove">Remove</a>
 					</td>
 				</tr>
 				{% endfor %}
 			</table>
+
+			<div class="well well-danger">
+				<input type="hidden" name="action" value="remove_selected_products" />
+				<button type="submit" class="btn btn-danger">Remove selected products</button>
+			</div>
+
 			{% if page_obj %}
 				{% include "catalogue/partials/pagination.html" %}
 			{% endif %}
@@ -56,3 +63,8 @@ Products in range {{ range.name }} | {{ block.super }}
 		<p>No products found.</p>
 	{% endif %}
 {% endblock dashboard_content %}
+
+{% block onbodyload %}
+{{ block.super }}
+oscar.dashboard.ranges.init()
+{% endblock %}
