moved edits to bootstrap .less files to osc page .less, removed commented out imports from styles.less

--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -370,23 +370,6 @@ h6 {
 .page-header h1 {
   line-height: 1;
 }
-.page-header.action {
-  *zoom: 1;
-  margin-bottom: 0px;
-}
-.page-header.action:before,
-.page-header.action:after {
-  display: table;
-  content: "";
-}
-.page-header.action:after {
-  clear: both;
-}
-.page-header.action h1,
-.page-header.action h2 {
-  float: left;
-  margin-bottom: 0px;
-}
 ul,
 ol {
   padding: 0;
@@ -493,18 +476,8 @@ small {
 cite {
   font-style: normal;
 }
-/*@import "bootstrap/code.less";*/
 form {
   margin: 0 0 18px;
-  *zoom: 1;
-}
-form:before,
-form:after {
-  display: table;
-  content: "";
-}
-form:after {
-  clear: both;
 }
 fieldset {
   padding: 0;
@@ -874,15 +847,6 @@ select:focus:required:invalid:focus {
   margin-bottom: 18px;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
-  *zoom: 1;
-}
-.form-actions:before,
-.form-actions:after {
-  display: table;
-  content: "";
-}
-.form-actions:after {
-  clear: both;
 }
 .uneditable-input {
   display: block;
@@ -1214,7 +1178,6 @@ table .span12 {
   width: 924px;
   margin-left: 0;
 }
-/*@import "bootstrap/sprites.less";*/
 .dropdown {
   position: relative;
 }
@@ -1338,35 +1301,10 @@ table .span12 {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  *zoom: 1;
-}
-.well:before,
-.well:after {
-  display: table;
-  content: "";
-}
-.well:after {
-  clear: both;
 }
 .well blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
-}
-.well-success {
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
-}
-.well-danger {
-  background-color: #f2dede;
-  border-color: #eed3d7;
-}
-.well-info {
-  background-color: #d9edf7;
-  border-color: #bce8f1;
-}
-.well-blank {
-  background-color: #ffffff;
-  border-color: rgba(0, 0, 0, 0.1);
 }
 .fade {
   -webkit-transition: opacity 0.15s linear;
@@ -1593,16 +1531,16 @@ table .span12 {
   background-color: #942a25 \9;
 }
 .btn-success {
-  background-color: #61b861;
-  background-image: -moz-linear-gradient(top, #74c474, #46a546);
-  background-image: -ms-linear-gradient(top, #74c474, #46a546);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#74c474), to(#46a546));
-  background-image: -webkit-linear-gradient(top, #74c474, #46a546);
-  background-image: -o-linear-gradient(top, #74c474, #46a546);
-  background-image: linear-gradient(top, #74c474, #46a546);
+  background-color: #5bb75b;
+  background-image: -moz-linear-gradient(top, #62c462, #51a351);
+  background-image: -ms-linear-gradient(top, #62c462, #51a351);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
+  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
+  background-image: -o-linear-gradient(top, #62c462, #51a351);
+  background-image: linear-gradient(top, #62c462, #51a351);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#74c474', endColorstr='#46a546', GradientType=0);
-  border-color: #46a546 #46a546 #2f6f2f;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#51a351', GradientType=0);
+  border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
@@ -1611,11 +1549,11 @@ table .span12 {
 .btn-success.active,
 .btn-success.disabled,
 .btn-success[disabled] {
-  background-color: #46a546;
+  background-color: #51a351;
 }
 .btn-success:active,
 .btn-success.active {
-  background-color: #378137 \9;
+  background-color: #408140 \9;
 }
 .btn-info {
   background-color: #49afcd;
@@ -2288,7 +2226,7 @@ input[type="submit"].btn.small {
 .navbar-search .search-query :-moz-placeholder {
   color: #eeeeee;
 }
-.navbar-search .search-query::-webkit-input-placeholder {
+.navbar-search .search-query ::-webkit-input-placeholder {
   color: #eeeeee;
 }
 .navbar-search .search-query:hover {
@@ -2454,7 +2392,6 @@ input[type="submit"].btn.small {
 .breadcrumb .active a {
   color: #333333;
 }
-/*@import "bootstrap/pagination.less";*/
 .pager {
   margin-left: 0;
   margin-bottom: 18px;
@@ -2593,9 +2530,6 @@ input[type="submit"].btn.small {
   margin-left: 5px;
   margin-bottom: 0;
 }
-/*@import "bootstrap/tooltip.less";*/
-/*@import "bootstrap/popovers.less";*/
-/*@import "bootstrap/thumbnails.less";*/
 .label {
   padding: 1px 3px 2px;
   font-size: 9.75px;
@@ -2619,8 +2553,6 @@ input[type="submit"].btn.small {
 .label-info {
   background-color: #3a87ad;
 }
-/*@import "bootstrap/progress-bars.less";*/
-/*@import "bootstrap/accordion.less";*/
 .carousel {
   position: relative;
   margin-bottom: 18px;
@@ -2783,6 +2715,58 @@ body {
   -moz-border-radius: inherit;
   border-radius: inherit;
 }
+.well {
+  *zoom: 1;
+}
+.well:before,
+.well:after {
+  display: table;
+  content: "";
+}
+.well:after {
+  clear: both;
+}
+.well-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+.well-danger {
+  background-color: #f2dede;
+  border-color: #eed3d7;
+}
+.well-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+}
+.well-blank {
+  background-color: #ffffff;
+  border-color: rgba(0, 0, 0, 0.1);
+}
+.pull-clear {
+  clear: both;
+}
+form {
+  *zoom: 1;
+}
+form:before,
+form:after {
+  display: table;
+  content: "";
+}
+form:after {
+  clear: both;
+}
+.form-actions {
+  *zoom: 1;
+}
+.form-actions:before,
+.form-actions:after {
+  display: table;
+  content: "";
+}
+.form-actions:after {
+  clear: both;
+}
 .header {
   text-shadow: 0 1px 0 white;
   position: relative;
@@ -2805,6 +2789,23 @@ body {
 .sub-header {
   background: none;
   padding: 0px 0px 10px;
+}
+.page-header.action {
+  *zoom: 1;
+  margin-bottom: 0px;
+}
+.page-header.action:before,
+.page-header.action:after {
+  display: table;
+  content: "";
+}
+.page-header.action:after {
+  clear: both;
+}
+.page-header.action h1,
+.page-header.action h2 {
+  float: left;
+  margin-bottom: 0px;
 }
 .cart {
   margin: 0px;
@@ -3118,6 +3119,11 @@ body {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   *zoom: 1;
 }
+.account_settings blockquote,
+.new_address blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
 .account_settings:before,
 .new_address:before,
 .account_settings:after,
@@ -3128,11 +3134,6 @@ body {
 .account_settings:after,
 .new_address:after {
   clear: both;
-}
-.account_settings blockquote,
-.new_address blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
 }
 .login_form form,
 .register_form form {
@@ -3150,6 +3151,11 @@ body {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   *zoom: 1;
 }
+.login_form form blockquote,
+.register_form form blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
 .login_form form:before,
 .register_form form:before,
 .login_form form:after,
@@ -3160,11 +3166,6 @@ body {
 .login_form form:after,
 .register_form form:after {
   clear: both;
-}
-.login_form form blockquote,
-.register_form form blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
 }
 .login_form form h2,
 .register_form form h2 {
@@ -3704,6 +3705,10 @@ body {
   *zoom: 1;
   height: 250px;
 }
+.promo_related blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
 .promo_related:before,
 .promo_related:after {
   display: table;
@@ -3711,10 +3716,6 @@ body {
 }
 .promo_related:after {
   clear: both;
-}
-.promo_related blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
 }
 /* review styles */
 .review {
@@ -3782,6 +3783,13 @@ body {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   *zoom: 1;
 }
+.review_add blockquote,
+.review_all blockquote,
+.review_read blockquote,
+.side_categories blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
 .review_add:before,
 .review_all:before,
 .review_read:before,
@@ -3798,13 +3806,6 @@ body {
 .review_read:after,
 .side_categories:after {
   clear: both;
-}
-.review_add blockquote,
-.review_all blockquote,
-.review_read blockquote,
-.side_categories blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
 }
 /* This is needed for ie7 */
 #main_slider,
@@ -4436,9 +4437,6 @@ body {
 }
 .pull-left {
   float: left;
-}
-.pull-clear {
-  clear: both;
 }
 .hide {
   display: none;
