--- a/oscar/static/oscar/less/page/head_foot.less
+++ b/oscar/static/oscar/less/page/head_foot.less
@@ -23,6 +23,14 @@
   background:none;
   padding:0px 0px @gridGutterWidth / 2;
 }
+.page-header.action {
+  .clearfix();
+  margin-bottom:0px;
+  h1,h2 {
+    float:left;
+    margin-bottom:0px;
+  }
+}
 .cart {
   margin:0px;
   .clearfix();
