--- a/oscar/static/oscar/less/bootstrap/buttons.less
+++ b/oscar/static/oscar/less/bootstrap/buttons.less
@@ -133,7 +133,7 @@
 }
 // Success appears as green
 .btn-success {
-  .buttonBackground(lighten(@green, 15%), @green);
+  .buttonBackground(#62c462, #51a351);
 }
 // Info appears as a neutral blue
 .btn-info {
