--- a/oscar/static/oscar/less/page/osc_layout.less
+++ b/oscar/static/oscar/less/page/osc_layout.less
@@ -42,3 +42,37 @@ body {
     .border-radius(inherit)
   }
 }
+// WELLS
+// -----
+.well {
+  .clearfix();
+}
+.well-success {
+  background-color: @successBackground;
+  border-color: @successBorder;  
+}
+.well-danger {
+  background-color: @errorBackground;
+  border-color: @errorBorder;
+}
+.well-info {
+  background-color: @infoBackground;
+  border-color: @infoBorder;
+}
+.well-blank {
+  background-color: @white;
+  border-color: rgba(0,0,0,.1);
+}
+// UTILITY CLASSES
+// ---------------
+.pull-clear {
+  clear: both;
+}
+// FORMS
+// ------------
+form {
+  .clearfix();
+}
+.form-actions {
+  .clearfix();
+}
