--- a/oscar/templates/dashboard/ranges/range_product_list.html
+++ b/oscar/templates/dashboard/ranges/range_product_list.html
@@ -26,12 +26,26 @@ Products in range '{{ range.name }}' | {{ block.super }}
 {% endblock header %}
 
 {% block dashboard_content %}
+
+	<div class="well well-info">
+		<div class="sub-header">
+			<h3>Add products</h3>
+		</div>
+		<form action="." method="post" class="">
+			{% csrf_token %}
+			<input type="hidden" name="action" value="add_products"/>
+			{% include 'partials/form_fields.html' with form=form %}
+			<button type="submit" class="btn btn-primary">Go!</button>
+		</form>
+	</div>
+
 	{% if products.count %}
 		<form action="." method="post">
 			{% csrf_token %}
 			<table class="table table-striped table-bordered">
 				<tr>
 					<th></th>
+					<th>SKU<th>
 					<th>Title</th>
 					<th>Price</th>
 					<th></th>
@@ -41,6 +55,7 @@ Products in range '{{ range.name }}' | {{ block.super }}
 					<td>
 						<input type="checkbox" name="selected_product" value="{{ product.id }}" />
 					</td>
+					<td>{{ product.stockrecord.partner_sku }}</td>
 					<td>{{ product.get_title }}</td>
 					<td>{{ product.stockrecord.price_incl_tax|currency }}</td>
 					<td>
