Correcting HTML error.

--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -172,7 +172,7 @@ My account | {{ block.super }}
             </table>
             <div class="form-actions">
                 <a href="{% url customer:email-list %}" class="btn btn-primary">View email history</a>
-            <div>
+            </div>
             {% endif %}
 			{% endblock %}
         </div>
