--- a/oscar/templates/checkout/nav.html
+++ b/oscar/templates/checkout/nav.html
@@ -1,27 +1,8 @@
 <nav class="checkoutNav">
 	<ul class="nav row-fluid">
-        {% if step == 1 %}
-        <li class="active span3"><h3>1. Shipping address</h3></li>
-        {% else %}
-        <li class="disabled span3"><h3>1. Shipping address</h3></li>
-        {% endif %}
-
-        {% if step == 2 %}
-        <li class="active span3"><h3>2. Shipping method</h3></li>
-        {% else %}
-        <li class="disabled span3"><h3>2. Shipping method</h3></li>
-        {% endif %}
-
-        {% if step == 3 %}
-        <li class="active span3"><h3>3. Payment</h3></li>
-        {% else %}
-        <li class="disabled span3"><h3>3. Payment</h3></li>
-        {% endif %}
-
-        {% if step == 4 %}
-        <li class="active span3"><h3>4. Place order</h3></li>
-        {% else %}
-        <li class="disabled span3"><h3>4. Place order</h3></li>
-        {% endif %}
+	        <li class="{% if step == 1 %}active{% else %}{% if step > 1 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>1. Shipping address</h3></li>
+	        <li class="{% if step == 2 %}active{% else %}{% if step > 2 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>2. Shipping method</h3></li>
+	        <li class="{% if step == 3 %}active{% else %}{% if step > 3 %}visited{% else %}disabled{% endif %}{% endif %} span3"><h3>3. Payment</h3></li>
+	        <li class="{% if step == 4 %}active{% else %}disabled{% endif %} span3"><h3>Confirmation</h3></li>
 	</ul>
 </nav>
