Moved dashboard.less up a level.
All bootstrap files now in the same place, and there is a generating
script to make things easier.

--- a/oscar/static/oscar/less/dashboard.less
+++ b/oscar/static/oscar/less/dashboard.less
@@ -1,10 +1,12 @@
 // import base bootstrap - separate from frontend
 @import url("bootstrap.min.css");
+
 // Unique Fonts
 @import url("snowcone.css");
+
 // Core variables and mixins separate from frontend variables and mixins
-@import "variables"; // Modify this for custom colors, font-sizes, etc
-@import "mixins";
+@import "dashboard/variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "dashboard/mixins.less";
 
 // OSCAR DASHBOARD UNIQUE STYLES
 // -----------
