Added missing {{ block.super }}

--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -79,6 +79,7 @@ Dashboard | {{ block.super }}
 
 {# Block for additional scripts #}
 {% block extrascripts %}
+    {{ block.super }}
     <script src="{{ STATIC_URL }}oscar/js/oscar/ui.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}oscar/js/oscar/dashboard.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/jquery-ui.min.js"></script>
