--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -33,4 +33,5 @@
 {# Block for additional scripts #}
 {% block extrascripts %}
     {% include "partials/extrascripts.html" %}
+    {{ block.super }}
 {% endblock %}
