--- a/oscar/templates/layout_3_col.html
+++ b/oscar/templates/layout_3_col.html
@@ -52,4 +52,5 @@
 {# Block for additional scripts #}
 {% block extrascripts %}
     {% include "partials/extrascripts.html" %}
+    {{ block.super }}
 {% endblock %}
