--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -55,7 +55,7 @@
     {% include "partials/footer_checkout.html" %}
 {% endblock %}
 
-{# Block for additional scripts #}
 {% block extrascripts %}
+    {{ block.super }}
     <script src="{{ STATIC_URL }}oscar/js/oscar/checkout.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
