--- a/oscar/templates/layout_2_col.html
+++ b/oscar/templates/layout_2_col.html
@@ -59,4 +59,5 @@
 {# Block for additional scripts #}
 {% block extrascripts %}
     {% include "partials/extrascripts.html" %}
+    {{ block.super }}
 {% endblock %}
