Started on sort integration

--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -28,7 +28,7 @@
 
 {% block content %}
 <article class="product_page"><!-- Start of product page -->
-    {% if user.is_authenticated %}
+    {% if user.is_authenticated and user.is_staff %}
     <div class="row-fluid">
         <div class="well">
             <a href="{% url dashboard:catalogue-product product.id %}"><button class="btn btn-success" value='Edit this product'>Edit this product</button></a>
