--- a/oscar/templates/catalogue/partials/gallery.html
+++ b/oscar/templates/catalogue/partials/gallery.html
@@ -1,21 +1,23 @@
+{% load thumbnail %}
+
 {% with product.images.all as all_images %}
     {# use length rather then count as the images get queried anyways #}
-    {% if all_images|length > 1 %}
-    <script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">	    
-            <div class="rg-image-wrapper">
 
-                            <div class="rg-image-nav">
-                                    <a href="#" class="rg-image-nav-prev">Previous Image</a>
-                                    <a href="#" class="rg-image-nav-next">Next Image</a>
-                            </div>
-                    <div class="rg-image"></div>
-                    <div class="rg-loading"></div>
-                    <div class="rg-caption-wrapper">
-                            <div class="rg-caption" style="display:none;">
-                                    <p></p>
-                            </div>
-                    </div>
+    {% if all_images|length > 1 %}
+    <script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">
+        <div class="rg-image-wrapper">
+            <div class="rg-image-nav">
+               <a href="#" class="rg-image-nav-prev">Previous Image</a>
+               <a href="#" class="rg-image-nav-next">Next Image</a>
             </div>
+            <div class="rg-image"></div>
+            <div class="rg-loading"></div>
+            <div class="rg-caption-wrapper">
+                <div class="rg-caption" style="display:none;">
+                    <p></p>
+                </div>
+            </div>
+        </div>
     </script>
     <div id="rg-gallery" class="rg-gallery">
             <div class="rg-thumbs">
@@ -40,15 +42,14 @@
                     <!-- End Elastislide Carousel Thumbnail Viewer -->
             </div><!-- rg-thumbs -->
     </div><!-- rg-gallery -->
+
     {% else %}
-        {% with all_images.0 as image %}
-            {% if image %}
-            <a href="{{ image.original.url }}" rel="lightbox">
-                <img src="{{ image.original.url }}" data-large="{{ image.original.url }}" alt="image02" data-description="{% if image.caption %}{{ image.caption }}{% endif %}" />
-            </a>
-            {% else %}
-                <img src="/static/oscar/img/image_not_found.jpg" alt="No image found"/>
-            {% endif %}    
-        {% endwith %}
+		{% with image=product.primary_image %}
+		    {% thumbnail image.original "400x400" upscale=False as thumb %}
+			<a href="{{ thumb.url }}" rel="lightbox">
+				<img src="{{ thumb.url }}" data-large="{{ image.original.url }}" alt="image02" data-description="{% if image.caption %}{{ image.caption }}{% endif %}" />
+			</a>
+			{% endthumbnail %}
+		{% endwith %}
     {% endif %}
 {% endwith %}
