Fixed bug in product detail template

--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -109,7 +109,7 @@
         {% endfor %}
         <tr>
             <th>Num reviews</th>
-            <td>{{ reviews.count }}</td>
+            <td>{{ product.reviews.count }}</td>
         </tr>
         <tr>
             <td></td>
