Updated checkout to use a 'action' parameter for placing orders.
This allows the preview to accept two types of POST:

1) POSTing from payment-details to submit sensitive data, which gets
   re-rendered in the preview template
2) POSTing from preview to submit the orderk

--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -14,6 +14,12 @@ Checkout | {{ block.super }}
 
 {% block content %}
 
+{% if error %}
+	<div class="alert alert-error">
+		{{ error }}
+	</div>
+{% endif %}
+
 <div class="row-fluid">
     {% block shipping_address %}
     <div class="span6">
