--- a/oscar/templates/checkout/preview.html
+++ b/oscar/templates/checkout/preview.html
@@ -10,7 +10,8 @@ Order preview | {{ block.super }}
 
 {% block place_order %}
 <h3>Please review the information below, then click "Place Order"</h3>
-<form method="post" action="{% url checkout:payment-details %}">
+<form method="post" action="{% url checkout:preview %}">
+	<input type="hidden" name="action" value="place_order" />
 	{% csrf_token %}
     <div class="form-actions">
         <button id='place-order' type="submit" value="Place order" class="pull-right btn btn-primary btn-large js-disable-on-click">Place order</button>
