--- a/oscar/static/oscar/css/dashboard.css
+++ b/oscar/static/oscar/css/dashboard.css
@@ -7,6 +7,7 @@
 body{background:#fff;}
 .container-fluid{padding-left:20px;padding-right:20px;max-width:100%;}
 .navbar-fixed-top .navbar-inner{padding-left:20px;padding-right:20px;}
+.navbar .nav>li span{display:block;padding:10px;}
 .subnav-fixed{position:fixed;right:0;left:0;z-index:1030;top:40px;-webkit-box-shadow:0 1px 5px rgba(0, 0, 0, 0.1);-moz-box-shadow:0 1px 5px rgba(0, 0, 0, 0.1);box-shadow:0 1px 5px rgba(0, 0, 0, 0.1);border-bottom:1px solid #D5D5D5;}
 .subnav{background-color:#f2f2f2;background-image:-moz-linear-gradient(top, #f5f5f5, #eeeeee);background-image:-ms-linear-gradient(top, #f5f5f5, #eeeeee);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#eeeeee));background-image:-webkit-linear-gradient(top, #f5f5f5, #eeeeee);background-image:-o-linear-gradient(top, #f5f5f5, #eeeeee);background-image:linear-gradient(top, #f5f5f5, #eeeeee);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#eeeeee', GradientType=0);height:36px;width:100%;}
 .subnav .nav{padding-left:20px;padding-right:20px;}.subnav .nav>li>a{margin:0;padding-top:11px;padding-bottom:11px;border-left:1px solid #f5f5f5;border-right:1px solid #E5E5E5;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;}
@@ -56,8 +57,8 @@ h3{margin-bottom:4.5px;}
 .tabs.product_managment{margin-bottom:0px;}.tabs.product_managment li.active a{background-color:#efefef;}
 .tabbable.dashboard .nav{margin-bottom:0px;}
 .tabbable.dashboard .nav-tabs>li>a{background:#f5f5f5;background-color:#e0e0e0;background-image:-moz-linear-gradient(top, #cccccc, #ffffff);background-image:-ms-linear-gradient(top, #cccccc, #ffffff);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#cccccc), to(#ffffff));background-image:-webkit-linear-gradient(top, #cccccc, #ffffff);background-image:-o-linear-gradient(top, #cccccc, #ffffff);background-image:linear-gradient(top, #cccccc, #ffffff);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#ffffff', GradientType=0);border:1px solid #DDD;margin:6px 10px 0 0;color:#555555;font-weight:bold;text-shadow:1px 1px 0 #fff;}
-.tabbable.dashboard .nav-tabs>li.active a,.tabbable.dashboard .nav-tabs>li>a:hover{background:#f5f5f5;border-bottom-color:transparent;background-color:#f5f5f5;background-image:-moz-linear-gradient(top, #eeeeee, #ffffff);background-image:-ms-linear-gradient(top, #eeeeee, #ffffff);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#ffffff));background-image:-webkit-linear-gradient(top, #eeeeee, #ffffff);background-image:-o-linear-gradient(top, #eeeeee, #ffffff);background-image:linear-gradient(top, #eeeeee, #ffffff);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=0);border-bottom:1px solid #fff;outline:none;font-weight:bold;color:#0088CC;margin-top:0;height:20px;}
-.tabbable.dashboard .tab-content{padding:18px;border:1px solid #e1e1e1;border-top-width:0px;background:#fff;-webkit-border-bottom-right-radius:5px;-webkit-border-bottom-left-radius:5px;-moz-border-radius-bottomright:5px;-moz-border-radius-bottomleft:5px;border-bottom-right-radius:5px;border-bottom-left-radius:5px;}
+.tabbable.dashboard .nav-tabs>li.active a,.tabbable.dashboard .nav-tabs>li>a:hover{background:#f5f5f5;border-bottom-color:transparent;background-color:#f5f5f5;background-image:-moz-linear-gradient(top, #eeeeee, #ffffff);background-image:-ms-linear-gradient(top, #eeeeee, #ffffff);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#ffffff));background-image:-webkit-linear-gradient(top, #eeeeee, #ffffff);background-image:-o-linear-gradient(top, #eeeeee, #ffffff);background-image:linear-gradient(top, #eeeeee, #ffffff);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=0);border-bottom:1px solid #fff;outline:none;font-weight:bold;color:#0088CC;}
+.tabbable.dashboard .tab-content{display:block;width:auto;padding:18px;border:1px solid #e1e1e1;border-top-width:0px;background:#fff;-webkit-border-bottom-right-radius:5px;-webkit-border-bottom-left-radius:5px;-moz-border-radius-bottomright:5px;-moz-border-radius-bottomleft:5px;border-bottom-right-radius:5px;border-bottom-left-radius:5px;}
 .fields-full input[type=text],.fields-full textarea{width:99%;}
 .well{*zoom:1;}.well:before,.well:after{display:table;content:"";}
 .well:after{clear:both;}
@@ -70,7 +71,7 @@ h3{margin-bottom:4.5px;}
 .bar-y-axis{position:absolute;top:16px;width:5em;margin:0;padding:0;float:left;display:inline;}
 .bar-y-axis li{list-style:none;height:33px;float:right;}
 .bar-chart,.bar-chart dt,.bar-chart dd{margin:0;padding:0;}
-.bar-chart{position:absolute;top:0;left:0;width:99%;height:300px;padding-left:5em;}
+.bar-chart{position:absolute;top:0;left:0;width:98%;height:300px;padding-left:5em;}
 .bar-chart dd{position:relative;float:left;width:4%;height:330px;margin-top:22px;}
 .bar-chart dd em{position:absolute;bottom:-2em;right:0;}
 .bar-chart span{position:absolute;display:block;width:90%;bottom:0;left:0;z-index:1;color:#555555;text-align:center;text-decoration:none;}
