--- a/oscar/templates/catalogue/partials/pagination.html
+++ b/oscar/templates/catalogue/partials/pagination.html
@@ -3,7 +3,7 @@
         {% if page_obj.has_previous %}
         <li class="previous"><a href="?page={{ page_obj.previous_page_number }}">previous</a></li>
         {% endif %}
-        <li class="current">Page {{ page_obj.number }} of {{ paginator.num_pages }}.</li>
+        <li class="current">Page {{ page_obj.number }} of {{ paginator.num_pages }}</li>
         {% if page_obj.has_next %}
         <li class="next"><a href="?page={{ page_obj.next_page_number }}">next</a></li>
         {% endif %}
