--- a/oscar/templates/dashboard/ranges/range_form.html
+++ b/oscar/templates/dashboard/ranges/range_form.html
@@ -26,7 +26,7 @@ Create range | Range management | {{ block.super }}
 {% endblock header %}
 
 {% block dashboard_content %}
-<form action="." method="post" class="">
+<form action="." method="post" class="well form-horizontal">
 	{% csrf_token %}
 	{% include "partials/form_fields.html" with form=form %}
 	{% block form_actions %}
