--- a/oscar/templates/partials/nav_checkout.html
+++ b/oscar/templates/partials/nav_checkout.html
@@ -1,4 +1,5 @@
 <div class="navbar primary">
+{% comment %}
     <div class="navbar-inner">
         <div class="container" style="width: auto;">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -24,4 +25,5 @@
             </div><!-- /.nav-collapse -->
         </div>
     </div><!-- /navbar-inner -->
+{% endcomment %}
 </div><!-- /navbar -->
