Added fixture for sandbox pages

--- a/oscar/templates/partials/footer.html
+++ b/oscar/templates/partials/footer.html
@@ -1,8 +1,7 @@
 <footer class="footer container-fluid">
     {% block footer %}
         <ul class="footer_links">   
-            <li><a href="#about">About</a></li>
-			<li><a href="#contact">Contact</a></li>
+            <li><a href="/about/">About</a></li>
             <li class="top_page"><a href="#top_page" class="app-ico ico_fill_up">Top of the page</a></li>            
         </ul>
     {% endblock %}
