Tidied up templates a little

--- a/oscar/templates/customer/registration.html
+++ b/oscar/templates/customer/registration.html
@@ -5,22 +5,25 @@
 Register | {{ block.super }}
 {% endblock %}
 
-{% block header %}
-<div class="page-header">
-    <h1>Register</h1>
-</div>
-{% endblock header %}
-
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        <a href="{% url promotions:home %}">Home</a>
+        <span class="divider">/</span>
+    </li>
+	<li class="active"><a href=".">Register</a></li>
+</ul>
+{% endblock %}
 
 {% block content %}
 
 <div class="row-fluid">
     <div class="span6 register_form">
         <form action="{{ request.get_full_path }}" method="post" class="form-stacked" />
-            <h2>Register</h2>
+			<h2>Register</h2>
             {% csrf_token %}
             {% include "partials/form_fields.html" with form=registration_form %}
-            <button name="registration_submit" type="submit" value="Register" class="btn">Register</button>
+            <button name="registration_submit" type="submit" value="Register" class="btn btn-primary btn-large">Register</button>
         </form>
     </div>
 </div>    
