Various FE fixes

--- a/oscar/static/oscar/less/dashboard.less
+++ b/oscar/static/oscar/less/dashboard.less
@@ -442,5 +442,14 @@ h3 {
         #ui-datepicker-div td .ui-state-highlight {background:#eeeeee;}
         #ui-datepicker-div td .ui-state-active {color:#FFFFFF;background:#0088CC;}
 
-
+/* ADDITIONAL ERRORS */
+.errorlist {
+    margin:0 0 0 20px;
+    padding:0 0 10px 0;
+    color:#B94A48;
+    li {
+        padding:0 0 5px 0;
+        list-style:none;
+    }
+}
 
