--- a/oscar/static/oscar/less/page/osc_layout.less
+++ b/oscar/static/oscar/less/page/osc_layout.less
@@ -76,3 +76,14 @@ form {
 .form-actions {
   .clearfix();
 }
+
+// ADDITIONAL ERRORS
+.errorlist {
+    margin:0;
+    padding:0 0 10px 0;
+    color:#B94A48;
+    li {
+        padding:0 0 5px 0;
+        list-style:none;
+    }
+}
