--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -28,109 +28,148 @@ User {{ user.username }} | {{ block.super }}
 
 {% block dashboard_content %}
 {% with user=object %}
-<div id="user_details" class="well well-info">
-    <ul>
-        <li>Email: {{ user.email }}</li>
-        <li>First name: {{ user.first_name }}</li>
-        <li>Last name: {{ user.last_name }}</li>
-        <li>This user is <strong>{% if user.is_active %}active{% else %}inactive{% endif %}</strong></li>
-        {% if user.is_superuser %}
-        <li><strong>Superuser</strong></li>
-        {% endif %}
-    </ul>
-</div>
-<div class="sub-header">
-    <h2>Detail information</h2>
-</div>
-<div id="user_order_details" class="well well-info">
-    <h3>General</h3>
-    <ul>
-        <li>Last login: {{ user.last_login }}</li>
-        <li>Date joined: {{ user.date_joined }}</li>
-        <li>Number of viewed products: {{ user.userrecord.num_product_views }}</li>
-    </ul>
-    <h3>Orders</h3>
-    <ul>
-        <li>Number of orders: {{ user.userrecord.num_orders }}</li>
-        <li>Number of ordered items: {{ user.userrecord.num_order_items }}</li>
-        <li>Total spent: {{ user.userrecord.total_spent|currency }}</li>
-        <li>Date of last order:: {{ user.userrecord.date_last_order }}</li>
-    </ul>
-    <h3>Reviews</h3>
-    <ul>
-        <li>Number of reviews: {{ user.reviews.count }}</li>
-    </ul>
-</div>
-<div id="user_orders">
-    <div class="sub-header">
-        <h2>Orders</h2>
+<div class="row-fluid">
+    <div class="span3">
+        <h2>General</h2>
+        <div id="user_details" class="well well-info">
+            <ul>
+                <li>Email: {{ user.email }}</li>
+                <li>First name: {{ user.first_name }}</li>
+                <li>Last name: {{ user.last_name }}</li>
+                <li>This user is <strong>{% if user.is_active %}active{% else %}inactive{% endif %}</strong></li>
+                {% if user.is_superuser %}
+                <li><strong>Superuser</strong></li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
-    {% if user.orders.count %}
-     <table class="table table-striped table-bordered">
-         <tr>
-             <th>Order Number</th>
-             <th>Num items</th>
-             <th>Total value</th>
-             <th>Date placed</th>
-             <th>Status</th>
-             <th></th>
-         </tr>
-         {% for order in user.orders.all %}
-         <tr>
-             <td>{{ order.number }}</td>
-             <td>{{ order.num_items }}</td>
-             <td>{{ order.basket_total_incl_tax|currency }}</td>
-             <td>{{ order.date_placed|date:"d/m/y H:s" }}</td>
-             <td>{{ order.status }}</td>
-             <td><a href="{% url dashboard:order-detail order.number %}" class="btn btn-info">View</a></td>
-         </tr>
-         {% endfor %}
-     </table>
-    {% else %}
-        <p>This user has not placed any orders yet.</p>
-    {% endif %}
+
+    <div class="span9">
+        <h2>Detailed information</h2>
+        <div id="user_order_details" class="row-fluid">
+            <div class="span4">
+                <div class="well well-info">
+                    <h3>General</h3>
+                    <ul>
+                        <li>Last login: {{ user.last_login }}</li>
+                        <li>Date joined: {{ user.date_joined }}</li>
+                        <li>Number of viewed products: {{ user.userrecord.num_product_views }}</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="span4">
+                <div class="well well-info">
+                    <h3>Orders</h3>
+                    <ul>
+                        <li>Number of orders: {{ user.userrecord.num_orders }}</li>
+                        <li>Number of ordered items: {{ user.userrecord.num_order_items }}</li>
+                        <li>Total spent: {{ user.userrecord.total_spent|currency }}</li>
+                        <li>Date of last order: {{ user.userrecord.date_last_order }}</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="span4">
+                <div class="well well-info">
+                    <h3>Reviews</h3>
+                    <ul>
+                        <li>Number of reviews: {{ user.reviews.count }}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div id="user_addresses">
-    <div class="sub-header">
-        <h2>Addresses</h2>
-    </div>
-	{% for address in user.addresses.all %}
-	    <div>
-			{% for field in address.active_address_fields %}
-			{{ field }}<br/>
-			{% endfor %}
-		</div>
-	{% endfor %}
 
+<div class="tabbable dashboard">
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#user_orders" data-toggle="tab">Orders</a></li>
+		<li><a href="#user_addresses" data-toggle="tab">Addresses</a></li>
+		<li><a href="#user_reviews" data-toggle="tab">Reviews</a></li>
+	</ul>
+
+	<div class="tab-content">
+        <div id="user_orders" class="tab-pane active">
+            <h2>Orders</h2>
+            {% if user.orders.count %}
+             <table class="table table-striped table-bordered">
+                 <tr>
+                     <th>Order Number</th>
+                     <th>Num items</th>
+                     <th>Total value</th>
+                     <th>Date placed</th>
+                     <th>Status</th>
+                     <th></th>
+                 </tr>
+                 {% for order in user.orders.all %}
+                 <tr>
+                     <td>{{ order.number }}</td>
+                     <td>{{ order.num_items }}</td>
+                     <td>{{ order.basket_total_incl_tax|currency }}</td>
+                     <td>{{ order.date_placed|date:"d/m/y H:s" }}</td>
+                     <td>{{ order.status }}</td>
+                     <td><a href="{% url dashboard:order-detail order.number %}" class="btn btn-info">View</a></td>
+                 </tr>
+                 {% endfor %}
+             </table>
+            {% else %}
+                <p>This user has not placed any orders yet.</p>
+            {% endif %}
+        </div>
+
+        <div id="user_addresses" class="tab-pane">
+            <h2>Addresses</h2>
+            <div class="row-fluid">
+        	{% for address in user.addresses.all %}
+                <div class="span3">
+            	    <div class="well well-info">
+            			{% for field in address.active_address_fields %}
+            			{{ field }}<br/>
+            			{% endfor %}
+            		</div>
+            	</div>
+        	{% endfor %}
+            </div>
+        </div>
+
+        <div id="user_reviews" class="tab-pane">
+            <div class="sub-header">
+                <h2>Reviews</h2>
+            </div>
+            {% if user.reviews.count %}
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th>Product ID</th>
+                    <th>Score</th>
+                    <th>Title</th>
+                    <th>Body</th>
+                    <th>Date created</th>
+                </tr>
+                {% for review in user.reviews.all %}
+                <tr>
+                    <td>{{ review.product_id }}</td>
+                    <td>{{ review.score }}</td>
+                    <td>{{ review.title }}</td>
+                    <td>{{ review.body }}</td>
+                    <td>{{ review.date_created }}</td>
+                </tr>
+                {% endfor %}
+            </table>
+            {% else %}
+            <p>This user has not written any reviews yet.</p>
+            {% endif %}
+        </div>
+
+    </div>
 </div>
 
-<div id="user_reviews">
-    <div class="sub-header">
-        <h2>Reviews</h2>
-    </div>
-    {% if user.reviews.count %}
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>Product ID</th>
-            <th>Score</th>
-            <th>Title</th>
-            <th>Body</th>
-            <th>Date created</th>
-        </tr>
-        {% for review in user.reviews.all %}
-        <tr>
-            <td>{{ review.product_id }}</td>
-            <td>{{ review.score }}</td>
-            <td>{{ review.title }}</td>
-            <td>{{ review.body }}</td>
-            <td>{{ review.date_created }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    {% else %}
-    <p>This user has not written any reviews yet.</p>
-    {% endif %}
-</div>
+
+
+
+
+
+
 {% endwith %}
 {% endblock dashboard_content %}
