Various FE fixes

--- a/oscar/static/oscar/less/dashboard.less
+++ b/oscar/static/oscar/less/dashboard.less
@@ -452,4 +452,15 @@ h3 {
         list-style:none;
     }
 }
+.form-inline {
+    .help-block {
+        display:inline-block;
+        margin:0 20px 0 10px;
+        li {
+            list-style:none;
+            color:#B94A48;
+        }
+    }
+}
+
 
