--- a/oscar/templates/dashboard/offers/step_form.html
+++ b/oscar/templates/dashboard/offers/step_form.html
@@ -26,7 +26,7 @@
 {% endblock header %}
 
 {% block dashboard_content %}
-<form action="." method="post" class="">
+<form action="." method="post" class="form-horizontal well">
 	{% csrf_token %}
 	{% include "partials/form_fields.html" with form=form %}
 	{% block form_extradata %}{% endblock %}
